<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/l1"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/t1"
        android:text="@string/REGISTRATION"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e1"
        android:hint="@string/NAME"
        android:ems="10"
        android:inputType="text"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e2"
        android:hint="@string/EMAILID"
        android:ems="10"
        android:inputType="textEmailAddress"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e3"
        android:hint="@string/CONTACT"
        android:ems="10"
        android:inputType="number"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e4"
        android:hint="@string/PASSWORD"
        android:ems="10"
        android:inputType="textPassword"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e5"
        android:hint="@string/AGE"
        android:ems="10"
        android:inputType="number"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e6"
        android:hint="@string/HEIGHT"
        android:ems="10"
        android:inputType="number"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e7"
        android:hint="@string/WEIGHT"
        android:ems="10"
        android:inputType="number"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e8"
        android:hint="@string/GENDER"
        android:ems="10"
        android:inputType="text"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e9"
        android:hint="@string/DOB"
        android:ems="10"
        android:onClick="pickdate"
        android:inputType="date"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/REGISTER"
        android:textStyle="bold"
        android:id="@+id/b1"
        android:onClick="Register"/>
</LinearLayout>
